block and heading spacing and fix timeline

--- a/assets/sass/_theme/_configuration.sass
+++ b/assets/sass/_theme/_configuration.sass
@@ -371,7 +371,13 @@ $heading-margin-bottom-with-sidebar: $heading-margin-bottom !default
 
 // BLOCKS
 // Base
-$block-space-y: $spacing-5 !default
+
+// Under desktop breakpoint
+$block-space-y: $spacing-4 !default
+// Upper desktop breakpoint without sidebar 
+$block-space-y-desktop: $spacing-5 !default
+// Upper desktop breakpoint with sidebar 
+$block-space-y-with-sidebar: $spacing-5 !default
 
 // Block call to action
 $block-call-to-action-background: var(--color-accent) !default
