--- a/assets/sass/_theme/blocks/call_to_action.sass
+++ b/assets/sass/_theme/blocks/call_to_action.sass
@@ -53,7 +53,7 @@
         padding-top: 0
         padding-bottom: 0
         .call_to_action
-            padding: $spacing-5 0
+            padding: var(--block-space-y) 0
             .actions
                 a
                     &:last-child
@@ -77,7 +77,7 @@
             > div
                 // TODO : simplifier l'application d'une couleur de fond sur le CTA avec sidebar et sans sidebar
                 background-color: var(--cta-background-color)
-                padding: var(--grid-gutter) columns(1)
+                padding: columns(1)
                 width: 100%
                 position: relative
                 &::after
