--- a/assets/sass/_theme/blocks/summary.sass
+++ b/assets/sass/_theme/blocks/summary.sass
@@ -7,4 +7,3 @@
 
     @include in-page-without-sidebar
         padding-top: 0
-        margin-top: $block-space-y
